<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="dataPublic">On May 21 at 18:36</string>
    <string name="Author">Netology. University of Internet Professions of the Future</string>
    <string name="content">Hi, this is a new Netology! Once upon a time, Netology began with online marketing intensive courses. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of change. http://netolo.gy/fyb</string>
    <string name="numViews" translatable="false">10</string>
    <string name="numWeb" translatable="false">12</string>
    <string name="numStars" translatable="false">150</string>
</resources>